# platform2

platform-tyq2/: CMakeLists.txt  README.md
platform-tyq2/apps/: CMakeLists.txt  CaptureTest.c
platform-tyq2/conf/: dpdk.xml  initial.xml  port_infomation.txt
platform-tyq2/include/CaptureDpdk/: cJSON.h  choice.h  dpdk.h  hash.h  json.h  shmdata.h  structure.h  testpmd.h  tools.h
platform-tyq2/include/CaptureTest/: dpdkTest.h  pcapTest.h
platform-tyq2/include/DpdkTest/: mydaqc.h
platform-tyq2/include/PcapTest/: pcapHash.h
platform-tyq2/src/: CMakeLists.txt
platform-tyq2/src/CaptureDpdk/: CMakeLists.txt  choice.c  dpdk.c  hash.c  icmpecho.c  json.c  rxonly.c  shmdata.c  structure.c  tools.c
platform-tyq2/src/DpdkTest/: CMakeLists.txt  DpdkTest.c  mydaqc.c
platform-tyq2/src/PcapTest/: CMakeLists.txt  pcapTest.c
